# cargo-inspect

./: Cargo.toml
src/: main.rs
