[package]
name = "cargo-inspect"
version = "0.1.0"
authors = ["statiolake <statiolake@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo = "0.35.0"
to_absolute = { git = "https://github.com/statiolake/to-absolute-rs" }
